Fix alignment

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -112,3 +112,7 @@ label small {
   background-color: #f2dede;
   border-color: #ebccd1;
 }
+
+.navbar-form {
+  overflow-x: visible;
+}
